repair path of img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-    <img class="profile" src="/images/tim_berners_lee.jpg" alt="Photo professionnel de tim berners lee" />
+    <img class="profile" src="./images/tim_berners_lee.jpg" alt="Photo professionnel de tim berners lee" />
     <h1>Tim Berners-Lee</h1> 
     <h2>Inventor of HTML</h2> 
     <p>Tim Berners-Lee is the <strong>Inventor</strong></strong> of the web. In 1989, Tim was working in a computing services section of <strong>CERN</strong> when he came up with the concept; at the time he had no idea that it would be implemented on such an <strong>enormous scale.</strong> </p>
@@ -34,21 +34,21 @@
 <section><h2 class="title_movies"><em class="his">His</em> favorite movies</h2>
     <table>
         <tr>
-            <td><img class="movies" src="/images/space_odyssey.jpg"/></td>
+            <td><img class="movies" src="./images/space_odyssey.jpg"/></td>
             <td>
                 <h3>2001 - Space Odyssey</h3>
                 <p class="description">Humanity finds a mysterious, obviously artificial, object buried beneath the Lunar surface and, with the intelligent computer H.A.L. 9000, sets off on a quest.</p>
             </td>
         </tr>
         <tr>
-            <td><img class="movies" src="/images/mister_hulot.jpg"/></td>
+            <td><img class="movies" src="./images/mister_hulot.jpg"/></td>
             <td>
                 <h3>Monsieur Hulot</h3>
                 <p class="description">Monsieur Hulot comes to beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>    
             </td>
         </tr>
         <tr>
-            <td><img class="movies" src="/images/alien.jpg"/></td>
+            <td><img class="movies" src="./images/alien.jpg"/></td>
             <td>
                 <h3>Alien</h3>
                 <p class="description">The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heals home only to realize that a deadly bioform has joined them.</p>    
